--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/javierfrancisco/reactFromScratch/issues"
   },
-  "homepage": "https://github.com/javierfrancisco/reactFromScratch#readme"
+  "homepage": "https://github.com/javierfrancisco/reactFromScratch#readme",
+  "dependencies": {
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
+  }
 }
