--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   },
   "homepage": "https://github.com/javierfrancisco/reactFromScratch#readme",
   "dependencies": {
+    "lodash-es": "^4.17.15",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "react-spring": "^9.0.0-beta.34",
+    "react-use-gesture": "^6.0.12"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
